[package]
name = "mandelbrot_plot"
version = "0.1.0"
authors = ["nicholasnjihian <njihianicklas55@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.10.1"
num="^0.1.27"
image="0.13.0"
crossbeam="0.2.8"

